--- a/vmdemo/src/main/AndroidManifest.xml
+++ b/vmdemo/src/main/AndroidManifest.xml
@@ -16,8 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Demo1Activity" />
-        <activity android:name=".Demo2Activity"></activity>
+        <activity android:name=".demo1.Demo1Activity" />
+        <activity android:name=".demo2.Demo2Activity" />
+        <activity android:name=".demo3.Demo3Activity"></activity>
     </application>
 
 </manifest>
